<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tari Aurora</string>
    <string name="wallet_service_desc">This service is required to communicate with Tari services. Please keep this service running if you want to be able to communicate with the Tari system.</string>
    <string name="ttl_store_url" translatable="false">https://store.tarilabs.com</string>
    <string name="tari_url" translatable="false">https://tari.com</string>
    <string name="github_repo_url" translatable="false">https://github.com/tari-project/wallet-android</string>
    <string name="user_agreement_url">https://www.tari.com/user_agreement/</string>
    <string name="privacy_policy_url">https://www.tari.com/privacy_policy/</string>
    <string name="disclaimer_url">https://www.tari.com/disclaimer/</string>
    <string name="ffi_admin_email_address" translatable="false">bug_reports@tari.com</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="digit_decimal_separator_bullet_char">.</string>
    <string name="digit_thousands_separator">,</string>
    <string name="digit_decimal_separator">.</string>
    <string name="emoji_hourglass">⏳</string>
    <string name="emoji_handshake">🤝</string>
    <string name="dummy_contact_alias">Sarah_D</string>
    <string name="dummy_contact_initial">S</string>
    <string name="dummy_message">Thanks again for helping with my move</string>
    <string name="dummy_emoji">🍀</string>
    <string name="wallet_service_notification_channel_name">Tari Aurora Service Notification Channel</string>
    <string name="app_notification_channel_name">Tari Aurora Notification Channel</string>
    <string name="notification_tx_received_title">You\'ve got tXTR!</string>
    <string name="notification_tx_received_description_format">Someone just sent you %1$s tXTR.</string>
    <string name="notification_tx_canceled_title">Your transaction was cancelled</string>
    <string name="notification_tx_canceled_description">The sender cancelled the transaction before it was finalized, so the tXTR was returned to them</string>
    <string name="error_node_unreachable_title">It\'s not you, it\'s the network.</string>
    <string name="error_node_unreachable_description">Looks like there\'s a connectivity issue on our end. Can you give us a few min, then come back and try again?</string>
    <string name="error_no_connection_title">Can\'t connect to the internet</string>
    <string name="error_no_connection_description">Your phone appears to be offline or has a poor connection at the moment. Please try again when you\'ve found a stronger signal.</string>
    <string name="error_balance_exceeded_title">Hold your horses! 🐴</string>
    <string name="error_balance_exceeded_description">Sorry, you can’t send this much tXTR until your previous transaction(s) are complete. Please wait for at least one transaction to complete and then try again.</string>
    <string name="common_continue">Continue</string>
    <string name="common_from">From</string>
    <string name="common_to">To</string>
    <string name="common_close">Close</string>
    <string name="common_new_uppercase">NEW</string>
    <string name="common_save">Save</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_ok">OK</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_share">Share</string>
    <string name="common_reset">Reset</string>
    <string name="common_unknown_error">Unknown error</string>
    <string name="emoji_id_copied">COPIED</string>
    <string name="emoji_id_bullet_separator">•••</string>
    <string name="emoji_id_chunk_separator">l</string>
    <string name="copy_emoji_id">Copy Emoji ID</string>
    <string name="paste_emoji_id">Paste copied Emoji ID</string>
    <string name="tap_to_see_full_emoji_id">Tap to see full Emoji ID</string>
    <string name="internet_connection_error_dialog_title">Can\'t connect to the interwebs</string>
    <string name="internet_connection_error_dialog_description">Your phone is either offline or has a poor connection at the moment. We\'ll wait here until you find some stronger signal.</string>
    <string name="wallet_service_title">Tari Aurora wallet service is running.</string>
    <string name="wallet_service_description">This service carries out wallet operations across applications.</string>
    <string name="wallet_service_error_testnet_tari_request">Could not allocate free tXTR.</string>
    <string name="wallet_service_error_no_internet_connection">No internet connection!</string>
    <string name="first_testnet_utxo_tx_message">💸 Here’s some tXTR!</string>
    <string name="second_testnet_utxo_tx_message">Nice work! Here\'s more tXTR to fill your coffers. Be sure to hit the Store icon to see real, exclusive items you can redeem with your "hard-earned" tXTR.</string>
    <string name="introduction_crypto_wallet_title_text_line_1">Private by default.</string>
    <string name="introduction_crypto_wallet_title_text_line_2">Useful by design.</string>
    <string name="introduction_create_wallet">Create Your Wallet</string>
    <string name="create_wallet_just_a_sec_label" tools:ignore="TypographyEllipsis">Hold on a sec...</string>
    <string name="create_wallet_just_sec_desc_text">We’re creating your wallet.</string>
    <string name="create_wallet_user_agreement_and_privacy_policy">By creating a wallet, you agree to the terms\nof the User Agreement and Privacy Policy</string>
    <string name="create_wallet_user_agreement">User Agreement</string>
    <string name="create_wallet_privacy_policy">Privacy Policy</string>
    <string name="create_wallet_restore_wallet_cta">Restore an Existing Wallet</string>
    <string name="create_wallet_awesome">We’re off to a great start!</string>
    <string name="create_wallet_now_text">Now, let’s create your Emoji ID.</string>
    <string name="create_wallet_address_desc">Your Emoji ID is your wallet address.\nIt’s how people can find you and send you tXTR.</string>
    <string name="create_wallet_continue_and_create_emoji_id">Create Your Emoji ID</string>
    <string name="create_wallet_your_emoji_id_text_label">This is your Emoji ID</string>
    <string name="create_wallet_your_emoji_id_text_label_bold_part">Emoji ID</string>
    <string name="create_wallet_set_of_emoji_your_wallet_address_desc">Your Emoji ID is your wallet’s address,\nand how others can find you and send you tXTR.</string>
    <string name="auth_prompt_title">🔑 Let’s secure your wallet. 🔑</string>
    <string name="auth_prompt_desc">Sleep well at night knowing you’ve taken precautions to keep your tXTR wallet safe and sound.</string>
    <string name="auth_prompt_button_text">Secure with Device Lock Code</string>
    <string name="auth_prompt_button_touch_id_text">Secure with Biometrics</string>
    <string name="proceed">Proceed</string>
    <string name="exit">Exit</string>
    <string name="onboarding_auth_title">Secure your wallet</string>
    <string name="onboarding_auth_biometric_prompt">Please enter your biometrics. Tari Aurora will require it each time you open the app.</string>
    <string name="onboarding_auth_device_lock_code_prompt">Please enter your smartphone\'s screen lock PIN, passcode, or pattern. Tari Aurora will require it each time you open the app.</string>
    <string name="auth_title">Unlock your wallet</string>
    <string name="auth_biometric_prompt">Please enter your biometrics to unlock your wallet.</string>
    <string name="auth_device_lock_code_prompt">Please enter your smartphone\'s screen lock PIN, passcode, or pattern to unlock your wallet.</string>
    <string name="auth_not_available_or_canceled_title">Authentication Error</string>
    <string name="auth_not_available_or_canceled_desc">Tari Aurora was not able to authenticate you. Do you still want to proceed?</string>
    <string name="auth_failed_title">Authentication Failed</string>
    <string name="auth_failed_desc">Tari Aurora was not able to authenticate you.</string>
    <string name="home_available_balance">Available Balance</string>
    <string name="home_tx_list_header_today">Today</string>
    <string name="home_tx_list_header_yesterday">Yesterday</string>
    <string name="home_send_tari">Send tXTR</string>
    <string name="home_txs">Transactions</string>
    <string name="home_tx_list_header_pending_txs">In Progress</string>
    <string name="home_setup_is_complete">Your wallet setup is complete.</string>
    <string name="home_you_are_ready_to_explore">You’re ready to start exploring</string>
    <string name="home_empty_wallet">We don’t see any transactions yet.\nHopefully something happens soon…🤞</string>
    <string name="home_navigation_label_fragment_tx_list">Home</string>
    <string name="home_navigation_label_fragment_store">Store</string>
    <string name="home_navigation_label_fragment_profile">Profile</string>
    <string name="home_navigation_label_fragment_settings">Settings</string>
    <string name="home_navigation_content_description_navigate_to_settings">Navigate to settings</string>
    <string name="home_navigation_content_description_navigate_to_wallet_info">Navigate to wallet info</string>
    <string name="home_navigation_content_description_navigate_to_ttl_store">Navigate to TTL store</string>
    <string name="home_navigation_content_description_navigate_to_transactions_list">Navigate to transactions list</string>
    <string name="home_navigation_content_description_navigate_to_send_tari">Navigate to Tari send flow</string>
    <string name="home_tari_bot_you_got_tari_dlg_title">You just got some tXTR!</string>
    <string name="home_tari_bot_you_got_tari_dlg_title_bold_part">tXTR!</string>
    <string name="home_tari_bot_dialog_desc">Try sending a bit of tXTR back to Tari Bot. It’s always better to give than to receive (and you’ll see how the wallet works too).</string>
    <string name="home_tari_bot_try_later">Try it later</string>
    <string name="home_ttl_store_dlg_title">Spend tXTR on\nreal (exclusive) stuff</string>
    <string name="home_ttl_store_dlg_title_bold_part">(exclusive) stuff</string>
    <string name="home_ttl_store_dlg_desciption">Check out TTL to spend your "hard-earned" tXTR on exclusive, one-of-a-kind stuff produced by the team at Tari Labs. Enjoy!</string>
    <string name="home_ttl_store_positive_btn">Visit the TTL Store</string>
    <string name="home_ttl_store_negative_btn">I\'ll check it out later</string>
    <string name="home_store_and_forward_progress_checking_for_updates">Checking for updates</string>
    <string name="home_store_and_forward_progress_receiving_txs">Receiving new transactions</string>
    <string name="bridge_settings_page_title">Bridges Configuration</string>
    <string name="bridge_settings_connect_cta">Connect</string>
    <string name="bridge_settings_disable_bridges_cta">No Bridges</string>
    <string name="bridge_settings_configure_custom_bridges_cta">Custom Bridges</string>
    <string name="bridge_settings_page_label">If you are in a country or using a connection that censors Tor, you might need to use bridges.</string>
    <string name="custom_bridge_settings_page_title">Custom Bridges</string>
    <string name="custom_bridge_settings_paste_bridges_label">Paste Bridges</string>
    <string name="custom_bridge_settings_request_bridges_cta">Request Bridges from torproject.org</string>
    <string name="custom_bridge_settings_scan_qr_cta">Scan QR Code</string>
    <string name="custom_bridge_settings_upload_qr_cta">Upload QR Code</string>
</resources>